--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -509,69 +509,7 @@
     </div>
 
     <% # blog %>
-    <div class="bg-grey-50" id="blog">
-        <div class="container py-16 md:py-20">
-            <h2
-                class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-                I also like to write</h2>
-            <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-                Check out my latest posts!</h4>
-            <div
-                class="w-full sm:w-3/4 lg:w-full mx-auto grid grid-cols-1 lg:grid-cols-3 gap-6 xl:gap-10 pt-12">
-                <a href="/post" class="shadow">
-                    <div style="background-image:url(<%= asset_pack_path("media/images/post-01.png") %>);"
-                        class="bg-center bg-cover bg-no-repeat h-72 sm:h-84 lg:h-64 xl:h-72 relative group">
-                        <span
-                            class="bg-cover bg-no-repeat bg-center absolute inset-0 opacity-10 transition-opacity group-hover:opacity-50 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to"></span>
-                        <span
-                            class="font-body font-bold text-sm md:text-base text-white border-2 border-white block px-6 py-2 uppercase rounded-full text-center absolute right-0 bottom-0 mr-4 mb-4">Read
-                            More</span>
-                    </div>
-                    <div class="bg-white py-6 xl:py-8 px-5">
-                        <span class="font-body font-semibold text-lg text-black block">How
-                            to become a frontend developer</span>
-                        <span class="font-body text-grey-20 pt-2 block">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua.</span>
-                    </div>
-                </a>
-                <a href="/post" class="shadow">
-                    <div style="background-image:url(<%= asset_pack_path("media/images/post-02.png") %>);"
-                        class="bg-center bg-cover bg-no-repeat h-72 sm:h-84 lg:h-64 xl:h-72 relative group">
-                        <span
-                            class="bg-cover bg-no-repeat bg-center absolute inset-0 opacity-10 transition-opacity group-hover:opacity-50 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to"></span>
-                        <span
-                            class="font-body font-bold text-sm md:text-base text-white border-2 border-white block px-6 py-2 uppercase rounded-full text-center absolute right-0 bottom-0 mr-4 mb-4">Read
-                            More</span>
-                    </div>
-                    <div class="bg-white py-6 xl:py-8 px-5">
-                        <span class="font-body font-semibold text-lg text-black block">My
-                            personal productivity system</span>
-                        <span class="font-body text-grey-20 pt-2 block">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua.</span>
-                    </div>
-                </a>
-                <a href="/post" class="shadow">
-                    <div style="background-image:url(<%= asset_pack_path("media/images/post-03.png") %>);"
-                        class="bg-center bg-cover bg-no-repeat h-72 sm:h-84 lg:h-64 xl:h-72 relative group">
-                        <span
-                            class="bg-cover bg-no-repeat bg-center absolute inset-0 opacity-10 transition-opacity group-hover:opacity-50 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to"></span>
-                        <span
-                            class="font-body font-bold text-sm md:text-base text-white border-2 border-white block px-6 py-2 uppercase rounded-full text-center absolute right-0 bottom-0 mr-4 mb-4">Read
-                            More</span>
-                    </div>
-                    <div class="bg-white py-6 xl:py-8 px-5">
-                        <span class="font-body font-semibold text-lg text-black block">My
-                            year in review 2020</span>
-                        <span class="font-body text-grey-20 pt-2 block">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua.</span>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
+    <%= render partial: 'blog', locals: { posts: @posts } %>
 
     <% # contact %>
     <div class="container py-16 md:py-20" id="contact">
