--- a/app/views/home/_blog.html.erb
+++ b/app/views/home/_blog.html.erb
@@ -8,7 +8,7 @@
         <div
             class="w-full sm:w-3/4 lg:w-full mx-auto grid grid-cols-1 lg:grid-cols-3 gap-6 xl:gap-10 pt-12">
             <% @posts.each do |post| %>
-                <a href="<%= blog_posts_permalink_path(post) %>" class="shadow">
+                <a href="<%= blog_posts_permalink_path(post) %>" class="shadow bg-white">
                     <div style="background-image:url(<%= post.featured_image_url %>);"
                         class="bg-center bg-cover bg-no-repeat h-72 sm:h-84 lg:h-64 xl:h-72 relative group">
                         <span
@@ -17,7 +17,7 @@
                             class="font-body font-bold text-sm md:text-base text-white border-2 border-white block px-6 py-2 uppercase rounded-full text-center absolute right-0 bottom-0 mr-4 mb-4">Read
                             More</span>
                     </div>
-                    <div class="bg-white py-6 xl:py-8 px-5">
+                    <div class="py-6 xl:py-8 px-5">
                         <span class="font-body font-semibold text-lg text-black block"><%= post.title %></span>
                         <span class="font-body text-grey-20 pt-2 block"><%= post.description %></span>
                     </div>
