get client side validations working:

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -515,14 +515,11 @@
     <div class="container py-16 md:py-20" id="contact">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-            Here's a contact form</h2>
+            Contact Ben</h2>
         <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             Have Any Questions?</h4>
         <div class="w-full sm:w-2/3 mx-auto pt-5 lg:pt-6 text-center">
-            <p class="font-body text-grey-10">Lorem ipsum dolor sit amet consectetur
-                adipiscing elit hendrerit condimentum turpis nisl sem, viverra
-                habitasse urna ante lobortis fermentum accumsan. Viverra
-                habitasse urna ante lobortis fermentum accumsan.</p>
+            <p class="font-body text-grey-10">Please feel free to reach out. No question is too simple, no job is too large.</p>
         </div>
         <form class="w-full sm:w-3/4 mx-auto pt-10">
             <div class="flex flex-col md:flex-row">
