--- a/app/views/pages/contact-me.html.erb
+++ b/app/views/pages/contact-me.html.erb
@@ -1,67 +1,59 @@
-<div>
-  <div class="container py-6 md:py-10">
-    <div class="max-w-4xl mx-auto">
-      <h1 class="font-body font-semibold text-primary text-3xl sm:text-4xl md:text-5xl xl:text-6xl pt-5">
-        Contact Me
-      </h1>
+<% set_meta_tags title: 'Contact Me', description: 'Contact Ben Radler for hiring or for help on Ruby, Rails, Node.js, Javascript' %>
+<% content_for :page_title, 'Contact Me' %>
 
-      <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6">
-        Have Any Questions?</h4>
-      <div class="w-full sm:w-2/3 pt-5 lg:pt-6">
-        <p class="font-body text-grey-10">Please feel free to reach out. No question is too simple, no job is too large.
-        </p>
-      </div>
-      <%= form_for ContactForm.new, url: contact_forms_path, validate: true, class: "w-full sm:w-3/4 mx-auto pt-10" do |f| %>
-      <% # required for captcha %>
-      <%= f.text_field :nickname, class: 'invisible' %>
+<h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6">
+  Have Any Questions?</h4>
+<div class="w-full sm:w-2/3 pt-5 lg:pt-6">
+  <p class="font-body text-grey-10">Please feel free to reach out. No question is too simple, no job is too large.
+  </p>
+</div>
+<%= form_for ContactForm.new, url: contact_forms_path, validate: true, class: "w-full sm:w-3/4 mx-auto pt-10" do |f| %>
+<% # required for captcha %>
+<%= f.text_field :nickname, class: 'invisible' %>
 
-      <div class="flex flex-col md:flex-row">
-        <%= f.text_field :name, placeholder: 'name', class: "w-full md:w-1/2 mr-3 lg:mr-5 font-body text-black px-4 py-3 border-grey-50 rounded" %>
-        <%= f.text_field :email, placeholder: 'email', class: "w-full md:w-1/2 mt-6 md:mt-0 md:ml-3 lg:ml-5 font-body text-black px-4 py-3 border-grey-50 rounded" %>
-      </div>
+<div class="flex flex-col md:flex-row">
+  <%= f.text_field :name, placeholder: 'name', class: "w-full md:w-1/2 mr-3 lg:mr-5 font-body text-black px-4 py-3 border-grey-50 rounded" %>
+  <%= f.text_field :email, placeholder: 'email', class: "w-full md:w-1/2 mt-6 md:mt-0 md:ml-3 lg:ml-5 font-body text-black px-4 py-3 border-grey-50 rounded" %>
+</div>
 
-      <%= f.text_area  :message, placeholder: 'message', class:"w-full font-body text-black px-4 py-3 border-grey-50 rounded mt-6 md:mt-8", cols: "30", rows: "10" %>
+<%= f.text_area  :message, placeholder: 'message', class:"w-full font-body text-black px-4 py-3 border-grey-50 rounded mt-6 md:mt-8", cols: "30", rows: "10" %>
 
-      <button
-        class="bg-primary hover:bg-grey-20 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-6 rounded items-center uppercase">
-        <%= f.submit("Send") %>
-        <i class='bx bx-chevron-right text-3xl relative -right-2'></i>
-      </button>
+<button
+  class="bg-primary hover:bg-grey-20 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-6 rounded items-center uppercase">
+  <%= f.submit("Send") %>
+  <i class='bx bx-chevron-right text-3xl relative -right-2'></i>
+</button>
 
-      <% end %>
+<% end %>
 
-      <div class="flex flex-col lg:flex-row pt-16">
-        <div class="w-full lg:w-1/3 border-l-2 border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
-          <div class="flex items-center">
-            <i class='bx bx-phone text-grey-40 text-2xl'></i>
-            <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
-              My Phone</p>
-          </div>
-          <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
-            (+881) 111 222 333</p>
-        </div>
-        <div
-          class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
-          <div class="flex items-center">
-            <i class='bx bx-envelope text-grey-40 text-2xl'></i>
-            <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
-              My Email</p>
-          </div>
-          <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
-            name@mydomain.com</p>
-        </div>
-        <div
-          class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
-          <div class="flex items-center">
-            <i class='bx bx-map text-grey-40 text-2xl'></i>
-            <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
-              My Address</p>
-          </div>
-          <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
-            123 New York D Block 1100, 2011 USA</p>
-        </div>
-      </div>
-
+<div class="flex flex-col lg:flex-row pt-16">
+  <div class="w-full lg:w-1/3 border-l-2 border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
+    <div class="flex items-center">
+      <i class='bx bx-phone text-grey-40 text-2xl'></i>
+      <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
+        My Phone</p>
     </div>
+    <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
+      (+881) 111 222 333</p>
+  </div>
+  <div
+    class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
+    <div class="flex items-center">
+      <i class='bx bx-envelope text-grey-40 text-2xl'></i>
+      <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
+        My Email</p>
+    </div>
+    <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
+      name@mydomain.com</p>
+  </div>
+  <div
+    class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
+    <div class="flex items-center">
+      <i class='bx bx-map text-grey-40 text-2xl'></i>
+      <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
+        My Address</p>
+    </div>
+    <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
+      123 New York D Block 1100, 2011 USA</p>
   </div>
 </div>
