--- a/app/views/pages/contact-me.html.erb
+++ b/app/views/pages/contact-me.html.erb
@@ -9,13 +9,8 @@
 </div>
 <%= form_for ContactForm.new, url: contact_forms_path, validate: true, class: "w-full sm:w-3/4 mx-auto pt-10" do |f| %>
 
-<%
-  # this invisible input is required for captcha
-  #
-  # tailwindcss purge isnt smart enough to understand css classes in the client_side_validations.rb initializer
-  # so use the styles on this invisible element to avoid purging it and not being able to render errors red :(
-%>
-<%= f.text_field :nickname, class: 'invisible text-red-500 border-red-500' %>
+<% # this invisible input is required for captcha %>
+<%= f.text_field :nickname, class: 'invisible' %>
 
 <div class="flex flex-col md:flex-row">
   <%= f.text_field :name, placeholder: 'name', class: "w-full md:w-1/2 mr-3 lg:mr-5 font-body text-black px-4 py-3 border-grey-50 rounded" %>
