comment for northemes icons

--- a/app/javascript/stylesheets/application.css
+++ b/app/javascript/stylesheets/application.css
@@ -13,6 +13,37 @@ html {
     font-weight: 400;
 }
 
+/*
+'quote' 'a',
+'gallery' 'b',
+'image' 'c',
+'audio' 'd',
+'video' 'e',
+'pinterest' 'f',
+'category' 'g',
+'link' 'h',
+'comment' 'i',
+'facebook' 'j',
+'twitter' 'k',
+'google' 'l',
+'linkedin' 'm',
+'github' 'n',
+'youtube' 'o',
+'dribbble' 'p',
+'skype' 'q',
+'instagram' 'r',
+'stackoverflow' 's',
+'tubmlr' 't',
+'foursquare' 'u',
+'rss' 'v',
+'tag' 'w',
+'color' 'x',
+'Ghost' 'y',
+'pin' 'z',
+'pen' '\e600',
+'menu' '\e601',
+'collapse' '\e602'
+*/
 .northemes-icons {
     font-family: "northemes-icons";
     font-style: normal;
