--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -1,13 +1,13 @@
-div[class="container pt-6 md:pt-10"]
-  .max-w-4xl.mx-auto
-    - flash.each do |name, msg|
-      - if name == "success"
-        - flash_color = "lime"
-      - elsif name == "error"
-        - flash_color = "red"
-      = content_tag :div, class: "flash flash-#{name} flex flex-row rounded-md shadow-md cursor-pointer border-2 border-#{flash_color}-800 p-4 text-#{flash_color}-900 bg-#{flash_color}-100 hover:bg-#{flash_color}-200" do
-        div[class="flex-1"]
-          = msg
-        span[class="flex-auto font-body font-bold text-sm md:text-base text-#{flash_color}-800 uppercase rounded-full text-right relative left-0 top-0"]
-          = "X"
-
+- if flash.count > 0
+  div[class="container pt-6 md:pt-10"]
+    .max-w-4xl.mx-auto
+      - flash.each do |name, msg|
+        - if name == "success"
+          - flash_color = "lime"
+        - elsif name == "error"
+          - flash_color = "red"
+        = content_tag :div, class: "flash flash-#{name} flex flex-row rounded-md shadow-md cursor-pointer border-2 border-#{flash_color}-800 p-4 text-#{flash_color}-900 bg-#{flash_color}-100 hover:bg-#{flash_color}-200" do
+          div[class="flex-1"]
+            = msg
+          span[class="flex-auto font-body font-bold text-sm md:text-base text-#{flash_color}-800 uppercase rounded-full text-right relative left-0 top-0"]
+            = "X"
