--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -521,55 +521,8 @@
         <div class="w-full sm:w-2/3 mx-auto pt-5 lg:pt-6 text-center">
             <p class="font-body text-grey-10">Please feel free to reach out. No question is too simple, no job is too large.</p>
         </div>
-        <form class="w-full sm:w-3/4 mx-auto pt-10">
-            <div class="flex flex-col md:flex-row">
-                <input
-                    class="w-full md:w-1/2 mr-3 lg:mr-5 font-body text-black px-4 py-3 border-grey-50 rounded"
-                    placeholder="Name" type="text" id="name">
-                <input
-                    class="w-full md:w-1/2 mt-6 md:mt-0 md:ml-3 lg:ml-5 font-body text-black px-4 py-3 border-grey-50 rounded"
-                    placeholder="Email" type="text" id="email">
-            </div>
-            <textarea class="w-full font-body text-black px-4 py-3 border-grey-50 rounded mt-6 md:mt-8"
-                placeholder="Message" id="message" cols="30" rows="10"></textarea>
-            <button
-                class="bg-primary hover:bg-grey-20 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-6 rounded items-center uppercase">
-                Send
-                <i class='bx bx-chevron-right text-3xl relative -right-2'></i>
-            </button>
-        </form>
-        <div class="flex flex-col lg:flex-row pt-16">
-            <div
-                class="w-full lg:w-1/3 border-l-2 border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
-                <div class="flex items-center">
-                    <i class='bx bx-phone text-grey-40 text-2xl'></i>
-                    <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
-                        My Phone</p>
-                </div>
-                <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
-                    (+881) 111 222 333</p>
-            </div>
-            <div
-                class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
-                <div class="flex items-center">
-                    <i class='bx bx-envelope text-grey-40 text-2xl'></i>
-                    <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
-                        My Email</p>
-                </div>
-                <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
-                    name@mydomain.com</p>
-            </div>
-            <div
-                class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
-                <div class="flex items-center">
-                    <i class='bx bx-map text-grey-40 text-2xl'></i>
-                    <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
-                        My Address</p>
-                </div>
-                <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
-                    123 New York D Block 1100, 2011 USA</p>
-            </div>
-        </div>
+
+        <%= render partial: "shared/contact_me", locals: { form_classes: "mx-auto" } %>
     </div>
 
     <% # map %>
