--- a/app/views/shared/_contact_me.html.erb
+++ b/app/views/shared/_contact_me.html.erb
@@ -29,31 +29,34 @@
 <div class="flex flex-col lg:flex-row pt-16">
   <div class="w-full lg:w-1/3 border-l-2 border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
     <div class="flex items-center">
-      <i class='bx bx-phone text-grey-40 text-2xl'></i>
+      <i class='bx bxl-linkedin text-grey-40 text-2xl'></i>
       <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
-        My Phone</p>
+        LinkedIn</p>
     </div>
     <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
-      (+881) 111 222 333</p>
+        <a href="https://www.linkedin.com/in/benradler/">linkedin.com/benradler</a>
+    </p>
   </div>
   <div
     class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
     <div class="flex items-center">
       <i class='bx bx-envelope text-grey-40 text-2xl'></i>
       <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
-        My Email</p>
+        Email</p>
     </div>
     <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
-      name@mydomain.com</p>
+      <a href="mailto:info@benradler.com">info@benradler.com</a>
+    </p>
   </div>
   <div
     class="w-full lg:w-1/3 border-l-2 lg:border-l-0 border-t-0 lg:border-t-2 border-r-2 border-b-2 border-grey-60 px-6 py-6 sm:py-8">
     <div class="flex items-center">
       <i class='bx bx-map text-grey-40 text-2xl'></i>
       <p class="font-body font-bold text-grey-40 lg:text-lg uppercase pl-2">
-        My Address</p>
+        Location</p>
     </div>
     <p class="font-body font-bold text-primary lg:text-lg pt-2 text-left">
-      123 New York D Block 1100, 2011 USA</p>
+        San Francisco Based, Remote Friendly
+    </p>
   </div>
 </div>
