Swap map image for SF, remove unused images

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -527,7 +527,7 @@
 
     <% # map %>
     <div class="bg-center bg-cover bg-no-repeat h-72 sm:h-64 md:h-72 lg:h-96"
-        style="background-image: url(<%= asset_pack_path("media/images/map.png") %>);"></div>
+        style="background-image: url(<%= asset_pack_path("media/images/map.jpg") %>);"></div>
 
     <% # newsletter %>
     <div class="bg-center bg-cover bg-no-repeat relative py-16 lg:py-24 bg-primary bg-blend-multiply"
