Style error pages

--- a/app/views/errors/file_not_found.slim
+++ b/app/views/errors/file_not_found.slim
@@ -1,6 +1,7 @@
 - set_meta_tags title: '404 - File Not Found', description: '404 - File Not Found'
 - content_for :page_title, '404 - File Not Found'
 
-| The page you were looking for could not be found.  If you feel you reached a page that should exist, please&nbsp;
-= link_to 'contact me here', page_path('contact-me')
-|.
+p[class="font-body text-grey-10 pt-5"]
+    = " The page you were looking for could not be found.  If you feel you reached a page that should exist, please "
+    = link_to 'contact me here', page_path('contact-me'), class: "text-primary"
+    = "."
