--- a/app/views/errors/unprocessable_entity.slim
+++ b/app/views/errors/unprocessable_entity.slim
@@ -1,6 +1,7 @@
 - set_meta_tags title: '422 - Unprocessable Entity', description: '422 - Unprocessable Entity'
 - content_for :page_title, '422 - Unprocessable Entity'
 
-| Sorry, seems like you're trying to do something you shouldn't!&nbsp;
-= link_to 'Contact me here', page_path('contact-me')
-| if you believe you received this error by mistake.
+p[class="font-body text-grey-10 pt-5"]
+    = "Sorry, seems like you're trying to do something you shouldn't! "
+    = link_to 'Contact me here', page_path('contact-me'), class: "text-primary"
+    = " if you believe you received this error by mistake."
