--- a/app/views/shared/_social_icons.html.slim
+++ b/app/views/shared/_social_icons.html.slim
@@ -1,11 +1,13 @@
-.flex.items-center.justify-center.sm:justify-start.pt-5.sm:pt-0.pl-2
+- icon_classes ||= ""
+
+div[class=" flex items-center justify-center sm:justify-start pt-5 sm:pt-0 pl-2"]
   a href="https://www.linkedin.com/in/benradler/" title="LinkedIn" 
-    i.bx.bxl-linkedin.text-white.hover:text-yellow.text-2xl
+    i[class="bx bxl-linkedin text-2xl #{icon_classes}"]
   a.pl-4 href="https://youtube.com/benradler" title="YouTube" 
-    i.bx.bxl-youtube.text-white.hover:text-yellow.text-2xl
+    i[class="bx bxl-youtube text-2xl #{icon_classes}"]
   a.pl-4 href="https://github.com/lordnibbler/" title="Github" 
-    i.bx.bxl-github.text-white.hover:text-yellow.text-2xl
+    i[class="bx bxl-github text-2xl #{icon_classes}"]
   a.pl-4 href="https://stackoverflow.com/users/418864/professormeowingtons" title="StackOverflow" 
-    i.bx.bxl-stack-overflow.text-white.hover:text-yellow.text-2xl
+    i[class="bx bxl-stack-overflow text-2xl #{icon_classes}"]
   a.pl-4 href=("<%= blog_posts_path(format: :rss) %>") title=("RSS Feed") 
-    i.bx.bx-rss.text-white.hover:text-yellow.text-2xl
+    i[class="bx bx-rss text-2xl #{icon_classes}"]
