--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -40,18 +40,21 @@
         <div class="container py-16 md:py-20 flex flex-col lg:flex-row items-center">
             <div class="w-full sm:w-3/4 lg:w-3/5 text-center lg:text-left">
                 <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase">
-                    Who am I?</h2>
+                    Not your average developer.</h2>
                 <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6">
-                    I'm Christy Smith, a Web Designer &
-                    Photographer</h4>
-                <p class="font-body text-grey-20 pt-6 leading-relaxed">Lorem ipsum
-                    dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                    minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                    sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Technical and Creative</h4>
+                <p class="font-body text-grey-20 pt-6 leading-relaxed">
+                    I have over <%= Time.now.year - 2011 %> years of professional experience as a Software Engineer at prestigious,
+                    successful companies in the San Francisco Bay Area.
+                </p>
+                <p class="font-body text-grey-20 pt-6 leading-relaxed">
+                    I've built an identity provider at Onelogin,
+                    an online store platform integrated with YouTube and Amazon at Teespring,
+                    and a Simulation System which enables Lyft to serve thousands of rides per minute during holidays and events.
+                </p>
+                <p class="font-body text-grey-20 pt-6 leading-relaxed">
+                    But unlike most developers who focus solely on technical ability,
+                    I am also a deeply creative person with a passion for good design and captivating storytelling.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center lg:justify-start pt-6">
                     <div class="flex justify-center sm:justify-start items-center">
@@ -65,6 +68,7 @@
                 </div>
 
             </div>
+
             <div class="w-full sm:w-3/4 lg:w-2/5 pl-0 lg:pl-12 pt-10 lg:pt-0">
                 <div>
                     <div class="flex justify-between items-end">
