homepage content - about

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -66,51 +66,53 @@
                     </div>
                     <%= render partial: 'shared/social_icons', locals: { icon_classes: "text-primary hover:text-yellow" } %>
                 </div>
-
             </div>
 
             <div class="w-full sm:w-3/4 lg:w-2/5 pl-0 lg:pl-12 pt-10 lg:pt-0">
-                <div>
-                    <div class="flex justify-between items-end">
-                        <h4 class="font-body font-semibold text-black uppercase">
-                            HTML & CSS</h4>
-                        <h3 class="font-body font-bold text-primary text-3xl">85%
-                        </h3>
-                    </div>
-                    <div class="h-3 w-full rounded-full bg-lila mt-2">
-                        <div class="h-3 rounded-full bg-primary" style="width: 85%;"></div>
-                    </div>
-                </div>
-                <div class="pt-6">
-                    <div class="flex justify-between items-end">
-                        <h4 class="font-body font-semibold text-black uppercase">Python
+                <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center lg:text-left">
+                    Weaponry</h4>
+                <div class="my-5">
+                    <div class="flex items-center justify-center lg:justify-start">
+                        <i class="bx bxl-javascript text-5xl text-primary mr-5"></i>
+                        <h4 class="font-header font-normal text-black uppercase">
+                            <%= "Frontend / " %>
+                            <span class="text-primary font-black">
+                                Typescript & React
+                            </span>
                         </h4>
-                        <h3 class="font-body font-bold text-primary text-3xl">70%
-                        </h3>
-                    </div>
-                    <div class="h-3 w-full rounded-full bg-lila mt-2">
-                        <div class="h-3 rounded-full bg-primary" style="width: 70%;"></div>
                     </div>
                 </div>
-                <div class="pt-6">
-                    <div class="flex justify-between items-end">
-                        <h4 class="font-body font-semibold text-black uppercase">Javascript</h4>
-                        <h3 class="font-body font-bold text-primary text-3xl">98%
-                        </h3>
-                    </div>
-                    <div class="h-3 w-full rounded-full bg-lila mt-2">
-                        <div class="h-3 rounded-full bg-primary" style="width: 98%;"></div>
+                <div class="my-5">
+                    <div class="flex items-center justify-center lg:justify-start">
+                        <i class="bx bxl-python text-5xl text-primary mr-5 p0"></i>
+                        <h4 class="font-header font-normal text-black uppercase">
+                            <%= "Backend / " %>
+                            <span class="text-primary font-black">
+                                Ruby & Python
+                            </span>
+                        </h4>
                     </div>
                 </div>
-                <div class="pt-6">
-                    <div class="flex justify-between items-end">
-                        <h4 class="font-body font-semibold text-black uppercase">
-                            Figma</h4>
-                        <h3 class="font-body font-bold text-primary text-3xl">91%
-                        </h3>
+                <div class="my-5">
+                    <div class="flex items-center justify-center lg:justify-start">
+                        <i class="bx bx-mobile text-5xl text-primary mr-5 p0"></i>
+                        <h4 class="font-header font-normal text-black uppercase">
+                            <%= "iOS / " %>
+                            <span class="text-primary font-black">
+                                Swift & Spritekit
+                            </span>
+                        </h4>
                     </div>
-                    <div class="h-3 w-full rounded-full bg-lila mt-2">
-                        <div class="h-3 rounded-full bg-primary" style="width: 91%;"></div>
+                </div>
+                <div class="my-5">
+                    <div class="flex items-center justify-center lg:justify-start">
+                        <i class="bx bx-camera text-5xl text-primary mr-5 p0"></i>
+                        <h4 class="font-header font-normal text-black uppercase">
+                            <%= "Film / " %>
+                            <span class="text-primary font-black">
+                                Sony A7siii
+                            </span>
+                        </h4>
                     </div>
                 </div>
             </div>
